fix slideshow z-indexes

--- a/scss/_slideshow.scss
+++ b/scss/_slideshow.scss
@@ -77,6 +77,7 @@ $slideshow-grid-width2: 50%;
 
         &.active {
           opacity: 1;
+          z-index: 2;
 
           + .c-slideshow__slide-image {
             opacity: 1;
@@ -90,6 +91,7 @@ $slideshow-grid-width2: 50%;
 
     .c-slideshow__controls {
       display: flex;
+      z-index: 1;
     }
 
   }
@@ -101,7 +103,6 @@ $slideshow-grid-width2: 50%;
   justify-content: space-evenly;
   border-top: 1px solid $color-white;
   background-color: $color-blue;
-  z-index: 2;
   grid-row: 2;
   grid-column: 1;
 
@@ -165,7 +166,7 @@ $slideshow-grid-width2: 50%;
     background-color: $color-blue;
     color: $color-white;
     font-style: normal;
-    z-index: 2;
+    z-index: 1;
     grid-row: 1;
     grid-column: 1;
 
@@ -269,7 +270,6 @@ $slideshow-grid-width2: 50%;
     bottom: 0;
     left: 0;
     background-color: $color-gray;
-    z-index: 1;
     grid-row: 1 / 3;
     grid-column: 1 / 3;
 
